makefiles have been changed a bit, stuff works for ubuntu as well btw

--- a/client/makefile
+++ b/client/makefile
@@ -1,2 +1,9 @@
+ifdef OS
 client:
 	g++ client.cpp client_socket.cpp -o client.exe -lwsock32
+	
+else
+client:
+	g++ -o client client.cpp client_socket.cpp 
+
+endif
