--- a/server/makefile
+++ b/server/makefile
@@ -1,2 +1,10 @@
+ifdef OS
 server:
 	g++ server.cpp server_socket.cpp -o server.exe -lwsock32
+
+else
+server:
+	g++ -o server server.cpp server_socket.cpp
+	
+endif
+
